second Update index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
         <section class="about" id="about">
             <div class="about-img">
-                <img src="/media/about_img.png" alt="about-img">
+                <img src="https://A1348089.github.io/demo_portfolio/media/about_img.png" alt="about-img">
             </div>
             <!-- content -->
              <div class="about-content">
